[package]
name = "wasm"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
authors.workspace = true

[lib]
crate-type = ["cdylib"]

[dependencies]
mio = "0.8.8"
sui_ql_core = { workspace = true }
tokio = { version = "1", features = ["macros"] }
serde-wasm-bindgen = "0.6.5"
wasm-bindgen = "0.2.92"
wasm-bindgen-futures = "0.4.42"
getrandom = { version = "0.2", features = ["js"] }
thiserror = { version = "1" }

[build]
rustflags = ["--cfg", "tokio_unstable"]